WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
166433
Null deref under WebPageProxy::applicationDidFinishSnapshottingAfterEnteringBackground
https://bugs.webkit.org/show_bug.cgi?id=166433
Summary
Null deref under WebPageProxy::applicationDidFinishSnapshottingAfterEnteringB...
Tim Horton
Reported
2016-12-22 14:16:36 PST
Null deref under WebPageProxy::applicationDidFinishSnapshottingAfterEnteringBackground
Attachments
Patch
(1.53 KB, patch)
2016-12-22 14:16 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2016-12-22 14:16:44 PST
Created
attachment 297671
[details]
Patch
Tim Horton
Comment 2
2016-12-22 14:17:07 PST
rdar://problem/29732407
Daniel Bates
Comment 3
2016-12-22 14:28:57 PST
Comment on
attachment 297671
[details]
Patch r=me
WebKit Commit Bot
Comment 4
2016-12-22 15:18:56 PST
Comment on
attachment 297671
[details]
Patch Clearing flags on attachment: 297671 Committed
r210118
: <
http://trac.webkit.org/changeset/210118
>
WebKit Commit Bot
Comment 5
2016-12-22 15:19:01 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug