Null deref under WebPageProxy::applicationDidFinishSnapshottingAfterEnteringBackground https://bugs.webkit.org/show_bug.cgi?id=166433 <rdar://problem/29732407>

Reviewed by Daniel Bates.

* UIProcess/ios/WebPageProxyIOS.mm:
(WebKit::WebPageProxy::applicationDidFinishSnapshottingAfterEnteringBackground):
m_drawingArea can be null if the process is not valid.


Canonical link: https://commits.webkit.org/183722@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@210118 268f45cc-cd09-0410-ab3c-d52691b4dbfc