Source/WebKit2/UIProcess/ios/WebPageProxyIOS.mm
@@ -687,7 +687,8 @@ void WebPageProxy::applicationDidEnterBackground()
 
 void WebPageProxy::applicationDidFinishSnapshottingAfterEnteringBackground()
 {
-    m_drawingArea->prepareForAppSuspension();
+    if (m_drawingArea)
+        m_drawingArea->prepareForAppSuspension();
     m_process->send(Messages::WebPage::ApplicationDidFinishSnapshottingAfterEnteringBackground(), m_pageID);
 }
 
